# smart-travel-planner

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml
.github/workflows/: ci.yml
backend/: .env.example  README.md  brief.md  main.py  pyproject.toml
backend/alembic/versions/: a7c3e5f19d02_add_destinations_tags_column.py  c4e8f1a2b6d3_add_agent_run_byok_and_cost.py
backend/app/: __init__.py
backend/app/__pycache__/: __init__.cpython-314.pyc.1810797127568  main.cpython-314.pyc.1651636684080
backend/app/agent/: __init__.py  graph.py  planner.py
backend/app/agent/__pycache__/: graph.cpython-314.pyc.1893808368304  graph.cpython-314.pyc.2564083870640
backend/app/agent/tools/: __init__.py  base.py  classifier_tool.py  live_conditions_tool.py  rag_retrieval_tool.py  recommendations_tool.py  registry.py
backend/app/api/__pycache__/: __init__.cpython-314.pyc.2733095451216
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/routes/: agent_runs.py  anthropic.py  auth.py  claude.py  discord_webhook.py  feedback.py  health.py  live_conditions.py  rag_retrieval.py
backend/app/core/: config.py  lifespan.py  logging_config.py  rate_limit.py  security.py
backend/app/core/__pycache__/: __init__.cpython-314.pyc.1651665962288  config.cpython-314.pyc.2262805005776  config.cpython-314.pyc.2568010370864  config.cpython-314.pyc.2572312467280  config.cpython-314.pyc.3216014349200  lifespan.cpython-314.pyc.2262806535728  lifespan.cpython-314.pyc.2374479977392  lifespan.cpython-314.pyc.2904202239376  security.cpython-314.pyc.2733114194992  security.cpython-314.pyc.3216014346480
backend/app/db/: dependencies.py  init_db.py  session.py
backend/app/db/__pycache__/: __init__.cpython-314.pyc.1431270873232  dependencies.cpython-314.pyc.2733115076864  init_db.cpython-314.pyc.1659666665904  init_db.cpython-314.pyc.2061218985616  init_db.cpython-314.pyc.2374479978032  session.cpython-314.pyc.1431273290640
backend/app/db/models/: __init__.py  agent_run.py  destination.py  destination_document.py  tool_log.py  user.py
backend/app/prompts/: request_field_extraction_prompt.txt
backend/app/schemas/: agent_runs.py  auth.py  claude.py  clustering.py  discord_webhook.py  live_conditions.py  rag.py  rag_retrieval.py  tool_logs.py
backend/app/schemas/__pycache__/: __init__.cpython-314.pyc.1777319655392  agent_runs.cpython-314.pyc.2536956708976  agent_runs.cpython-314.pyc.2842354188512  auth.cpython-314.pyc.1431270881552  claude.cpython-314.pyc.1892358236000  tool_logs.cpython-314.pyc.2536956709504
backend/app/services/: agent_runs.py  auth.py  claude.py  destination_ingestion.py  discord_webhook.py  live_conditions.py  llm.py  rag_ingestion.py  rag_retrieval.py  ranker_training.py  tool_logs.py  voyage_embeddings.py
backend/app/services/__pycache__/: agent_runs.cpython-314.pyc.1659665064240  agent_runs.cpython-314.pyc.2536956987504  auth.cpython-314.pyc.1375692780880  auth.cpython-314.pyc.1568633733968  auth.cpython-314.pyc.2572313535280  claude.cpython-314.pyc.1892358234944  claude.cpython-314.pyc.2652015760944  rag_ingestion.cpython-314.pyc.2662891313040  rag_ingestion.cpython-314.pyc.2958089503296  tool_logs.cpython-314.pyc.2536957756496  voyage_embeddings.cpython-314.pyc.2262143210704  (+1 more)
backend/artifacts/clustering/: cluster_members.json  hdbscan_clusterer.joblib  membership_vectors.npz  quality_report.json  stability_report.json  umap_reducer.joblib
backend/artifacts/destinations/: data_quality_report.csv  data_quality_report.json
backend/artifacts/rag/: rag_retrieval_eval.csv  rag_retrieval_eval.json
backend/artifacts/ranker/: model_metadata.json
backend/data/: rag_eval_queries.json  rag_source_manifest.json
backend/scripts/: cluster_destinations.py  evaluate_rag.py  ingest_rag.py  train_ranker.py
backend/tests/: conftest.py
backend/tests/agent/: test_graph_tool_failure.py
backend/tests/api/: test_agent_runs.py  test_agent_runs_clarification.py  test_auth.py  test_feedback.py
backend/tests/services/: test_agent_runs_clarification.py  test_clustering.py  test_destination_recommendations.py  test_discord_webhook.py  test_llm_providers.py  test_ranker_training.py  test_recommendation_persistence.py
(+43 files in other folders)
