[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.2",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "langgraph>=1.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pgvector>=0.4.1",
    "pydantic-settings>=2.11.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "umap-learn>=0.5.7",
    "hdbscan>=0.8.40",
    "google-genai>=2.10.0",
    "lightgbm==4.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/agent/tools/*/__pycache__/*"]

[tool.ruff]
line-length = 100
target-version = "py314"
# Deliberately relying on ruff's built-in default rule selection (roughly
# E4/E7/E9 + F - real correctness issues: unused imports/names, undefined
# names, syntax errors) rather than opting into pyupgrade (UP) or
# import-sorting (I) checks. This codebase has never been linted before -
# turning those on retroactively surfaces dozens of pre-existing
# modernization-style findings across alembic migrations, scripts, and app
# code that have nothing to do with adding a test suite. Establishing a
# meaningful, passing gate against *new* correctness issues matters more
# here than maximal strictness on day one.

[tool.ruff.lint.per-file-ignores]
# scripts/*.py and tests/conftest.py all use the same deliberate pattern:
# insert BACKEND_DIR into sys.path, then import app modules - the imports
# can't move above the sys.path insertion, so E402 (import not at top of
# file) is expected here, not a real ordering mistake.
"scripts/*.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.14"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true

# This codebase has never been type-checked before this PR. Running mypy
# end-to-end (not just against one module at a time, which is how this was
# first spot-checked) surfaces pre-existing type mismatches across several
# files - LangGraph nodes annotated with a full-state return type but
# returning partial dicts by convention, third-party stub mismatches
# (BeautifulSoup's Tag.find, httpx's AsyncClient.get params, google-genai's
# GenerateContentConfig), and a couple of genuine Literal-vs-str looseness
# spots. None of these are things this test-suite-and-CI PR introduced or
# should refactor - ignore_errors is scoped narrowly to exactly these
# pre-existing modules so mypy still gates every other module (including
# every new test file) at normal strictness, catching *new* type errors
# without turning "add tests" into "retrofit types onto the whole codebase."
[[tool.mypy.overrides]]
module = [
    "app.agent.graph",
    "app.services.rag_ingestion",
    "app.services.destination_recommendations",
    "app.services.live_conditions",
    "app.services.llm_providers.gemini_provider",
    "app.services.llm",
]
ignore_errors = true
